k8s/employee-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee
  labels:
    app: employee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee
  template:
    metadata:
      labels:
        app: employee
    spec:
      containers:
        - name: employee
          image: 483216680875.dkr.ecr.us-east-2.amazonaws.com/employee:10
          ports:
            - containerPort: 8080
          # resources:
          #   requests:
          #     cpu: "0.2"
          #     memory: 300Mi
          #   limits:
          #     cpu: "1.0"
          #     memory: 300Mi
          # readinessProbe:
          #   httpGet:
          #     port: 8080
          #     path: /actuator/health
          #   initialDelaySeconds: 60
          #   timeoutSeconds: 10
          #   periodSeconds: 20
          #   failureThreshold: 10
          # livenessProbe:
          #   httpGet:
          #     port: 8080
          #     path: /actuator/info
          #   initialDelaySeconds: 60
          #   timeoutSeconds: 10
          #   periodSeconds: 20
          #   failureThreshold: 10
          volumeMounts:
            - name: mongodb
              mountPath: /etc/secretspot
#            - name: config
#              mountPath: /etc/appconfig
      volumes:
        - name: mongodb
          secret:
            secretName: employee
#        - name: config
#          configMap:
#            name: employee
      # serviceAccountName: api-service-account
---
apiVersion: v1
kind: Service
metadata:
  name: employee
  labels:
    app: employee
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: employee
  type: NodePort
