k8s/organization-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization
  labels:
    app: organization
spec:
  replicas: 1
  selector:
    matchLabels:
      app: organization
  template:
    metadata:
      labels:
        app: organization
    spec:
      containers:
      - name: organization
        image: 483216680875.dkr.ecr.us-east-2.amazonaws.com/organization:2
        ports:
          - containerPort: 8080
        # resources:
        #   requests:
        #     cpu: "0.2"
        #     memory: 300Mi
        #   limits:
        #     cpu: "1.0"
        #     memory: 300Mi
        # readinessProbe:
        #   httpGet:
        #     port: 8080
        #     path: /actuator/health
        #   initialDelaySeconds: 60
        #   timeoutSeconds: 2
        #   periodSeconds: 20
        #   failureThreshold: 5
        # livenessProbe:
        #   httpGet:
        #     port: 8080
        #     path: /actuator/info
        #   initialDelaySeconds: 60
        #   timeoutSeconds: 2
        #   periodSeconds: 20
        #   failureThreshold: 5
        volumeMounts:
          - name: mongodb
            mountPath: /etc/secretspot
#          - name: config
#            mountPath: /etc/appconfig
      volumes:
        - name: mongodb
          secret:
            secretName: organization
#        - name: config
#          configMap:
#            name: organization
      # serviceAccountName: api-service-account
---
apiVersion: v1
kind: Service
metadata:
  name: organization
  labels:
    app: organization
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: organization
  type: NodePort
