k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: nginx
  rules:
  - host: vardhan.live
    http:
      paths:
        # - path: /api
        #   pathType: Prefix
        #   backend:
        #     service:
        #       name: api
        #       port:
        #         number: 3500
        - path: /employee
          backend:
            service:
              name: employee
              port:
                number: 8080
          pathType: Prefix
        - path: /department
          backend:
            service:
              name: department
              port:
                number: 8080      
          pathType: Prefix
        - path: /organization
          backend:
             service:
              name: organization
              port:
                number: 8080
          pathType: Prefix
        - path: /gateway
          backend:
            service:
              name: gateway
              port:
                number: 8080
          pathType: ImplementationSpecific
